fix clipping on iconic images

--- a/app/assets/stylesheets/_iconic.scss
+++ b/app/assets/stylesheets/_iconic.scss
@@ -1,7 +1,6 @@
 @import "colors";
 
 /* Iconic theme rules. Don't delete! */
-
 @mixin iconic-color($color) {
 	fill: $color;
 	stroke: $color;
@@ -29,4 +28,9 @@ img.iconic {
 }
 
 .iconic .iconic-property-accent {
+}
+
+/* WTF makes this required? 16px images should take up 16px */
+.iconic {
+  overflow: visible;
 }
